- Added customdata for Critter Prices, as originally created by u/RunnerPakhet and implemented for Chummer by Mesothelioma.
- Added basic traditions for the Traditionalist and Ancestor Shamans from Forbidden Arcana. 
- Added a customdata entry to change the Krime Stopper II to use the Shotguns category instead of Heavy Pistols.

Fixes implemented by BM123499

Armor.xml

    Added missing <armor> entry for Parachute.
    Added missing armor_capacity attribute for Pantheon Quick-Charge Battery Pack.

Critterpowers.xml

    Removed legacy SR4‑only power.
    Standardized hyphenation: Low-Light, Wire-band using minus signs.
    Added automotive powers.
    Added “Fold Perception” and “Agonizing Pain” from Howling Shadows (HS).

Critters.xml

    Renamed Baboon → Ozian Baboon (per source text).
    Removed “Wyrd Mantis” (SR4‑only).
    Populated missing <initiative>, <magic>, <resonance>, and <depth> fields for several critters.
    Remove unintended character across the file.
    Applied <rating> to skill and automotive powers; replaced stray <select>.
    Corrected power and quality names:
        Sillence → Silence
        Devour → Devouring
        Substance Extrusion → Secretion/Substance Extrusion
        Shadowing → Sneaking
        Improved Senses → Enhanced Senses
        Spell Resistance → Magic Resistance
        Banishing → Banishing Resistance
        Fae Glamour → Fey Glamour
        Regenerate → Regeneration
        Throw Weapon → Throwing Weapon
        Deezz → Derezz
        Real World Naivete → Real World Naiveté
    Re-classified:
        Moved Astral Perception into AdeptPower or Quality (chose Quality).
        Fixed <power> nesting under <optionalpowers>.
        Changed Munge to a Quality, Resonance Hosting to a Power, Agony to a Spell.

cyberware.xml

    Added missing <capacity> and <cost> attributes to several implants.
    Removed duplicated <inheritattributes> tag.

gears.xml

    Removed leftover of a commented sections (removing -->).